# bibtexgen

./: .gitignore  Pipfile  README.md  pyproject.toml  test_bibtexgen.py
.github/workflows/: publish.yml  test.yml
bibtexgen/: __init__.py  entry.py  utils.py
