[tool.poetry]
name = "bibtexgen"
version = "0.0.1"
description = "A tool to quickly export all references to bibtex"
authors = ["Shrey Dabhi <shrey.dabhi23@gmail.com>"]
license = "MIT"
repository = "https://github.com/sdabhi23/bibtexgen"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"

[tool.poetry.scripts]
bibtexgen = 'bibtexgen.entry:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
